@@ -29,6 +29,7 @@
 - Fix: [#10543] Secondary shop item prices are not imported correctly from RCT1 saves.
 - Fix: [#10547] RCT1 parks have too many rides available.
 - Fix: [#10587] Update last action coordinates on correct player.
+- Fix: [#10631] Game bugs out and crashes if you get too many stations via copying stations with the tile inspector.
 - Fix: [#10662] Duck cheat tooltips look odd and do not explain anything.
 - Fix: [#10694] The lift hill speed of the flying roller coaster cannot be changed (original bug).
 - Fix: [#10705] Apply multithreaded rendering to all viewports.
